Add : IceCreamListItem 할인 정보 보이게 처리

--- a/android/app/src/main/res/layout/fragment_ice_cream_detail.xml
+++ b/android/app/src/main/res/layout/fragment_ice_cream_detail.xml
@@ -58,7 +58,7 @@
 
 
             <TextView
-                android:id="@+id/ice_cream_price"
+                android:id="@+id/ice_cream_total_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
