--- a/android/app/src/main/res/layout/item_icecream.xml
+++ b/android/app/src/main/res/layout/item_icecream.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -24,8 +24,51 @@
             android:textSize="24sp" />
 
 
+        <LinearLayout
+            android:id="@+id/discount_area"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            >
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/original_price_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:textColor="@color/hint_color" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"
+                    android:layout_centerVertical="true"
+                    android:layout_alignStart="@id/original_price_tv"
+                    android:layout_alignEnd="@id/original_price_tv"/>
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="8dp"
+                android:layout_height="0dp"/>
+
+            <TextView
+                android:id="@+id/discount_rate_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/title_color"
+                tools:text="-5%" />
+
+        </LinearLayout>
+
+
         <TextView
-            android:id="@+id/ice_cream_price"
+            android:id="@+id/ice_cream_total_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
