Fix : 드라이 아이스 여부 매장 Toggle Button 클릭시 안보이게 처리

--- a/android/app/src/main/res/layout/fragment_ice_cream_order.xml
+++ b/android/app/src/main/res/layout/fragment_ice_cream_order.xml
@@ -163,6 +163,7 @@
             android:id="@+id/ice_info_area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginVertical="10dp"
             android:layout_marginHorizontal="16dp">
 
