--- a/android/app/src/main/res/layout/fragment_ice_cream_order.xml
+++ b/android/app/src/main/res/layout/fragment_ice_cream_order.xml
@@ -293,6 +293,7 @@
                     android:layout_height="0dp"/>
 
                 <ImageView
+                    android:id="@+id/user_image"
                     android:layout_width="20dp"
                     android:layout_height="20dp"/>
 
