--- a/android/app/src/main/res/layout/item_recent_order.xml
+++ b/android/app/src/main/res/layout/item_recent_order.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="180dp"
-    android:layout_height="wrap_content"
+    android:layout_height="220dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginBottom="8dp"
     android:orientation="vertical"
     android:gravity="center"
-    android:backgroundTint="@color/white"
-    app:cardElevation="8dp"
+    android:backgroundTint="@android:color/white"
+    app:cardElevation="2dp"
     app:cardCornerRadius="16dp">
     
     <LinearLayout
@@ -24,7 +26,9 @@
         app:cardElevation="0dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardBackgroundColor="@android:color/transparent"
+        app:strokeColor="@android:color/transparent">
         <ImageView
             android:id="@+id/recent_order_image"
             android:layout_gravity="center"
@@ -39,19 +43,25 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
-        android:textSize="15dp"
+        android:layout_marginBottom="4dp"
+        android:textSize="18dp"
+        android:textColor="@color/black"
         android:gravity="center"
-        tools:text="체리 아이스크림 외 1개"
-        />
+        tools:text="체리 아이스크림 외 1개" />
+
     <TextView
         android:id="@+id/recent_order_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_marginBottom="4dp"
         tools:text="25,000원" />
     <TextView
         android:id="@+id/recent_order_date_time_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_marginBottom="8dp"
         tools:text="2024.11.20 14:30" />
 
     </LinearLayout>
