--- a/android/app/src/main/res/layout/fragment_my_page.xml
+++ b/android/app/src/main/res/layout/fragment_my_page.xml
@@ -157,6 +157,7 @@
                 tools:text="씨앗 2단계" />
 
             <ImageView
+                android:id="@+id/level_image"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 tools:src="@drawable/right_arrow" />
@@ -168,6 +169,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:progressDrawable="@drawable/progress"
+            android:max="50000"
             style="?android:attr/progressBarStyleHorizontal" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
