--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="nav_default_color">#FECCD5</color>
 
     <color name="divider_color">#D3D3D3</color>
+    <color name="card_background_color">#fcf6fd</color>
 </resources>
