--- a/android/app/src/main/res/layout/fragment_login.xml
+++ b/android/app/src/main/res/layout/fragment_login.xml
@@ -1,70 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<android.widget.ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
+    android:fillViewport="true"
     tools:context=".ui.auth.LoginFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <ImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:src="@drawable/app_logo" />
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/app_logo" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="50sp"
-        android:textColor="@color/primary_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="@dimen/material_textinput_default_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:hint="@string/login_input_hint"
-        style="@style/customMaterialTextField">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_id"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/meet_me" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:text="@string/app_name"
+            android:textSize="50sp"
+            android:textColor="@color/primary_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="@dimen/material_textinput_default_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:hint="@string/password_input_hint"
-        style="@style/customMaterialTextField">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="@dimen/material_textinput_default_width"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:fontFamily="@font/meet_me" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_gravity="center_horizontal"
+            android:hint="@string/login_input_hint"
+            style="@style/customMaterialTextField">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/meet_me" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/login_btn"
-        android:layout_width="@dimen/material_textinput_default_width"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        style="@style/customMaterialButtonStyle" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="@dimen/material_textinput_default_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:hint="@string/password_input_hint"
+            style="@style/customMaterialTextField">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:fontFamily="@font/meet_me" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/signup_btn"
-        android:layout_width="@dimen/material_textinput_default_width"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up_text"
-        style="@style/customMaterialButtonStyle" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/login_btn"
+            android:layout_width="@dimen/material_textinput_default_width"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            style="@style/customMaterialButtonStyle" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/signup_btn"
+            android:layout_width="@dimen/material_textinput_default_width"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_up_text"
+            style="@style/customMaterialButtonStyle" />
 
-</LinearLayout>
+    </LinearLayout>
+</android.widget.ScrollView>
