--- a/android/app/src/main/res/layout/item_order_review.xml
+++ b/android/app/src/main/res/layout/item_order_review.xml
@@ -20,7 +20,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:layout_marginBottom="4dp"
-        android:padding="8dp">
+        android:padding="4dp">
 
         <TextView
             android:id="@+id/review_content"
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:orientation="horizontal"
+            android:layout_marginHorizontal="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -48,7 +49,6 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
