Fix : 최근 주문 내역 item 폰트 키우기

--- a/android/app/src/main/res/layout/fragment_ice_cream_list.xml
+++ b/android/app/src/main/res/layout/fragment_ice_cream_list.xml
@@ -26,6 +26,14 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/divider_color"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <!-- TabLayout 정의 -->
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
