--- a/android/app/src/main/res/layout/item_recent_order.xml
+++ b/android/app/src/main/res/layout/item_recent_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="180dp"
-    android:layout_height="220dp"
+    android:layout_height="230dp"
     android:layout_marginStart="16dp"
     android:layout_marginBottom="8dp"
     android:orientation="vertical"
@@ -41,11 +41,11 @@
     <TextView
         android:id="@+id/recent_order_name"
         android:layout_marginTop="8dp"
-        android:layout_width="100dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:layout_marginBottom="4dp"
-        android:textSize="18dp"
+        android:textSize="24dp"
         android:textColor="@color/black"
         android:gravity="center"
         tools:text="체리 아이스크림 외 1개" />
@@ -54,6 +54,7 @@
         android:id="@+id/recent_order_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:textColor="@color/black"
         android:layout_marginBottom="4dp"
         tools:text="25,000원" />
@@ -61,6 +62,7 @@
         android:id="@+id/recent_order_date_time_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:textColor="@color/black"
         android:layout_marginBottom="8dp"
         tools:text="2024.11.20 14:30" />
