--- a/android/app/src/main/res/layout/fragment_order_detail.xml
+++ b/android/app/src/main/res/layout/fragment_order_detail.xml
@@ -41,8 +41,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="10dp">
+            android:layout_margin="16dp">
 
             <TextView
                 android:id="@+id/textView3"
@@ -84,8 +83,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="10dp">
+            android:layout_margin="16dp">
 
             <TextView
                 android:id="@+id/textView4"
@@ -109,14 +107,14 @@
                     android:id="@+id/spoon_area"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:gravity="center_vertical">
+                    android:gravity="end|center_vertical">
 
                     <ImageView
                         android:id="@+id/spoon_image"
+                        android:src="@drawable/spoon"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:layout_marginRight="8dp" />
+                        android:layout_marginEnd="8dp" />
 
                     <TextView
                         android:id="@+id/spoon_count"
@@ -127,6 +125,7 @@
                         tools:text="2개" />
                 </LinearLayout>
 
+
                 <LinearLayout
                     android:id="@+id/ice_area"
                     android:layout_width="match_parent"
@@ -136,6 +135,7 @@
 
                     <ImageView
                         android:id="@+id/ice_image"
+                        android:src="@drawable/ice"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginRight="8dp" />
@@ -162,8 +162,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginVertical="10dp"
+            android:layout_margin="16dp"
             android:text="금액"
             android:textColor="@color/black"
             android:textSize="30sp" />
@@ -177,8 +176,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginVertical="10dp"
-            android:layout_marginHorizontal="16dp">
+            android:layout_margin="16dp">
 
             <TextView
                 android:id="@+id/order_price_tv"
