Add : 앱 로고 생성

--- a/android/app/src/main/res/layout/fragment_login.xml
+++ b/android/app/src/main/res/layout/fragment_login.xml
@@ -15,9 +15,13 @@
         android:gravity="center">
 
         <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:src="@drawable/app_logo" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="8dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -29,6 +33,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="10dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="@dimen/material_textinput_default_width"
@@ -42,6 +50,10 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/meet_me" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="10dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="@dimen/material_textinput_default_width"
@@ -57,12 +69,19 @@
                 android:fontFamily="@font/meet_me" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="10dp"/>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/login_btn"
             android:layout_width="@dimen/material_textinput_default_width"
             android:layout_height="wrap_content"
             android:text="@string/login"
             style="@style/customMaterialButtonStyle" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="10dp"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/signup_btn"
